--- a/Frontend/css/login.css
+++ b/Frontend/css/login.css
@@ -116,7 +116,7 @@ input {
 
 dialog {
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
     position: fixed;
     width: 300px;
