--- a/Frontend/css/modify-message.css
+++ b/Frontend/css/modify-message.css
@@ -96,7 +96,7 @@ h3 {
 
 dialog {
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
     position: fixed;
     width: 300px;
