--- a/Frontend/css/modify-user.css
+++ b/Frontend/css/modify-user.css
@@ -166,7 +166,7 @@ input[type=file]::file-selector-button:hover {
 
 dialog {
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
     position: fixed;
     width: 300px;
